# Locaita

./: .env  .gitignore  .gitmodules  Makefile  README.md  hyperparameters.yml  pyproject.toml  requirements.txt
legacy/: .gitignore  agent.py  buffer.py  constants.py  main.py  networks.py  requirements.txt  train.py
legacy/memory/: MemoryScratcher.cpp  MemoryScratcher.h  functions.py
legacy/scrapper/: MemoryScratcher.cpp  MemoryScratcher.h
legacy/src/: environment.py  training.py
legacy/src/osu/: manager.py  memory.py  routines.py  state.py  window.py
legacy/src/utils/: helper.py  memory.py  mouse_manager.py
memory/: MemoryScratcher.cpp  MemoryScratcher.h  functions.py
models/: actor.data-00000-of-00001  actor.index  critic.data-00000-of-00001  critic.index
neural/: agent.py  buffer.py  constants.py  env.py  main.py  networks.py  osu.py  train.py
scrapper/: MemoryScratcher.cpp  MemoryScratcher.h
src/: agent.py  buffer.py  constants.py  dqn.py  env.py  environment.py  helper.py  main.py  model.py  mouse_manager.py  network.py  networks.py  replay_buffer.py  train.py  training.py
src/locaita/log/: levels.py  logger.py
src/locaita/modules/: osu.py
src/locaita/modules/osu/: __init__.py  states.py
src/locaita/modules/osu/ai/: agent.py  environment.py  hyperparameters.yml  memory.py  network.py
src/locaita/modules/osu/context/: __init__.py  desktop.py  game.py  screen.py
src/locaita/modules/osu/manager/: mouse.py  (+1 more)
src/locaita/scripts/: __init__.py
src/locaita/scripts/osu/: clear.py  inference.py  launch.py  train.py
src/locaita/utils/: initial_message.py  threads.py
src/log/: logger.py
src/memory/: MemoryScratcher.cpp  MemoryScratcher.h  functions.py
src/osu/: manager.py  memory.py  routines.py  scrapper.py  state.py  window.py
src/scripts/: __init__.py
src/scripts/osu/: launch.py  train.py
src/utils/: __init__.py  scheduler.py  threads.py
