[project]
version = "0.1.0"
name = "Locaita"
description = "Locaita - multipurpose AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py==2.3.1",
    "cffi==1.17.1",
    "cloudpickle==3.1.1",
    "farama-notifications==0.0.4",
    "filelock==3.13.1",
    "fsspec==2024.6.1",
    "gevent==25.8.1",
    "greenlet==3.2.4",
    "grpcio==1.74.0",
    "gymnasium==1.2.0",
    "jinja2==3.1.4",
    "markdown==3.8.2",
    "markupsafe==2.1.5",
    "mouseinfo==0.1.3",
    "mpmath==1.3.0",
    "mss==10.1.0",
    "networkx==3.3",
    "numpy==2.1.2",
    "opencv-python==4.12.0.88",
    "packaging==25.0",
    "pillow==11.0.0",
    "protobuf==6.32.0",
    "psutil==7.0.0",
    "pyautogui==0.9.54",
    "pyclick==0.0.2",
    "pycowsay==0.0.0.2",
    "pycparser==2.22",
    "pyfiglet==1.0.4",
    "pygetwindow==0.0.9",
    "pymsgbox==1.0.9",
    "pynput==1.8.1",
    "pyperclip==1.9.0",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "python-dotenv==1.1.1",
    "python3-xlib==0.15",
    "pytweening==1.2.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sympy==1.13.3",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "torch==2.8.0+cu129",
    "torchvision==0.23.0+cu129",
    "typing-extensions==4.12.2",
    "websocket==0.2.1",
    "websocket-client>=1.8.0",
    "werkzeug==3.1.3",
    "xlib==0.21",
    "zope-event==5.1.1",
    "zope-interface==7.2",
]

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu129" },
]
torchvision = [
    { index = "pytorch-cu129" },
]


[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[project.scripts]
osu = "scripts.osu.launch:main"
osu-train = "scripts.osu.train:main"
